--- a/bindings/python/Cargo.toml
+++ b/bindings/python/Cargo.toml
@@ -25,6 +25,8 @@ ahash = { version = "0.8.11", features = ["serde"] }
 
 [dependencies.tokenizers]
 path = "../../tokenizers"
+default-features = true
+features = ["python_lexer"]
 
 [dev-dependencies]
 tempfile = "3.10"
@@ -32,3 +34,4 @@ pyo3 = { version = "0.25", features = ["auto-initialize"] }
 
 [features]
 default = ["pyo3/extension-module"]
+python_lexer = ["tokenizers/python_lexer"]
